# OSINT_env

./: .dockerignore  .gitignore  Dockerfile  README.md  blog.md  inference.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
.github/workflows/: validation.yml
artifacts/: latest_evaluation.json  leaderboard.json  osint_dashboard.html
artifacts/baselines/: openai_fixed_levels_dashboard.html  openai_fixed_levels_latest.json  openai_fixed_levels_leaderboard.json
artifacts/local_hf_eval_round_006/: evaluation_context.json  post_training_benchmark_dashboard.html  (+6 more)
config/: seed_example.json  seed_ollama_smoke.json  self_play_training_example.json  self_play_training_hf_a10g_smoke.json  self_play_training_hf_l40s_full.json  shared_config.json  shared_config_metaqa.json
docs/: adversarial_self_play.md  reward_design_notes.md
notebooks/: README.md  self_play_training_colab.ipynb
scripts/: build_fixed_levels_dataset.py  evaluate_hf_checkpoint.py  generate_fixed_levels_seed.py  run_openai_baseline.py  space_start.sh  test_ollama_space.py  validate_release.py
server/: app.py
tests/: test_cli_eval_outputs.py  test_config.py  test_dashboard.py  test_environment.py  test_eval.py  test_fixed_levels_dataset.py  test_generator.py  test_hf_jobs.py  test_inference.py  test_leaderboard.py  test_llm_interface.py  test_metaqa_dataset.py  test_openai_baseline.py  test_reward.py  test_seeding.py  test_self_play_swarm_v2.py  test_server.py  test_spawn_reward_hooks.py  test_swarm_agent.py  test_tools.py  test_training_config.py  test_validation.py
(+45 files in other folders)
